--- a/templates/repeated-form.html
+++ b/templates/repeated-form.html
@@ -4,24 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repeated Scheduling...</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/custom.css"/>
+    <title>Recurring Scheduler</title>
   </head>
-  <body>     
-    <form action="" method="post">
-      <h1>Repeated Schedling</h1>
-      <label for="receiver">Receiver: </label>
-      <input type="email" name="receiver" id="receiver" placeholder="Email Address" required>
-      <label for="period">Choose the period: </label>
-      <select onChange="periodChange()" name="period" id="period">
-        <option value="e-day">Every Day</option>
-        <option value="e-week">Every Week</option>
-        <option value="e-fortnight">Every Fortnight</option>
-        <option value="e-month">Every Month</option>
-        <option value="e-year">Every Year</option>
-      </select>
-      <label id="sub-label" for="date"></label>      
-      <button class="submitBtn" type="submit">Submit</button>
-    </form>
+  <body>    
+    <nav class="nav nav-justified nav-tabs">
+      <a class="nav-item nav-link" id="onetime-tab" href={{ url_for('onetime_form') }} role="tab" aria-controls="onetime" aria-selected="false">One-time Scheduler</a>
+      <a class="nav-item nav-link active" id="repeated-tab" href={{ url_for('repeated_form') }} role="tab" aria-controls="repeated" aria-selected="true">Recurring Scheduler</a>
+    </nav>
+    <div class="fade-right d-flex justify-content-center tab-content" id="pills-tabContent">
+      <form class="card w-45 active show d-flex justify-content-center" action="" method="post">
+        <h1 class="h1">Recurring Scheduler</h1>
+        <div class="form-group mt-4">
+          <label for="receiver">Receiver Email Address</label>
+          <input type="email" class="form-control" name="receiver" id="receiver" placeholder="name@example.com" required>
+        </div>
+        <div class="form-group mt-4">
+          <label for="period">Choose The Period: </label>
+          <select class="form-control custom-select" onChange="periodChange()" name="period" id="period">
+            <option value="e-day">Every Day</option>
+            <option value="e-week">Every Week</option>
+            <option value="e-fortnight">Every Fortnight</option>
+            <option value="e-month">Every Month</option>
+            <option value="e-year">Every Year</option>
+          </select>
+        </div>   
+        <button class="submitBtn btn btn-primary mt-3" type="submit">Submit</button>
+        <a class="text-center mt-3" href={{ url_for('home') }}>Back Home</a>
+      </form>
+    </div>
+    
     <script src="../static/repeatedForm.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
