--- a/templates/single-form.html
+++ b/templates/single-form.html
@@ -4,16 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One-time Schedule</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/custom.css"/>
+    <title>One-time Scheduler</title>
   </head>
   <body>     
-    <form action="" method="post">
-      <h1>One-time Scheduling</h1>
-      <label for="receiver">Receiver: </label>
-      <input type="email" name="receiver" id="receiver" placeholder="Email Address" required>
-      <label for="date">Choose Date: </label>
-      <input type="date" name="date" id="date" required/>    
-      <button class="submitBtn" type="submit">Submit</button>
-    </form>
+    <nav class="nav nav-justified nav-tabs">
+      <a class="nav-item nav-link active" id="onetime-tab" href={{ url_for('onetime_form') }} role="tab" aria-controls="onetime" aria-selected="true">One-time Scheduler</a>
+      <a class="nav-item nav-link" id="repeated-tab" href={{ url_for('repeated_form') }} role="tab" aria-controls="repeated" aria-selected="false">Recurring Scheduler</a>
+    </nav> 
+    <div class="fade-left d-flex justify-content-center tab-content" id="pills-tabContent">
+      <form class="card w-45 active show d-flex justify-content-center" action="" method="post">
+        <h1 class="h1">One-time Scheduler</h1>
+        <div class="form-group mt-4">
+          <label for="receiver">Receiver Email Address</label>
+          <input type="email" class="form-control" name="receiver" id="receiver" placeholder="name@example.com" required>
+        </div>
+        <div class="form-group mt-3">
+          <label for="date">Specific Date</label>
+          <input type="date" class="form-control" name="date" id="date" required>
+        </div>  
+        <button class="submitBtn btn btn-primary mt-3" type="submit">Submit</button>
+        <a class="text-center mt-3" href={{ url_for('home') }}>Back Home</a>
+      </form>
+      
+    </div>
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
